start example of usage

--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,14 @@
             <classifier>jakarta</classifier>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/c3p0/c3p0 -->
+        <dependency>
+            <groupId>c3p0</groupId>
+            <artifactId>c3p0</artifactId>
+            <version>0.9.1.2</version>
+        </dependency>
+
+
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
